force-app/main/default/objects/Master_Voucher__c/Master_Voucher__c.object-meta.xml
<CustomObject>
    <label>Master Voucher OC</label>
    <nameField>
        <displayFormat>MOC-{00000000}</displayFormat>
        <label>Master Voucher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Vouchers OC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>