force-app/main/default/objects/Master_Voucher__c/fields/Account_Company__c.field-meta.xml
<CustomField>
    <fullName>Account_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account/Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Master_Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>