force-app/main/default/objects/Master_Voucher__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande d’assistance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customers Request / Claim / Feedback (France)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Master Vouchers OC</relationshipLabel>
    <relationshipName>Master_Vouchers_OC</relationshipName>
    <type>Lookup</type>
</CustomField>