force-app/main/default/objects/Master_Voucher__c/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>