force-app/main/default/objects/Master_Voucher__c/fields/Date_d_expiration__c.field-meta.xml
<CustomField>
    <fullName>Date_d_expiration__c</fullName>
    <label>Date d&apos;expiration</label>
    <type>Date</type>
</CustomField>