force-app/main/default/objects/Master_Voucher__c/fields/Dur_e_de_validit__c.field-meta.xml
<CustomField>
    <fullName>Dur_e_de_validit__c</fullName>
    <defaultValue>&apos;2 mois&apos;</defaultValue>
    <label>Durée de validité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 mois</fullName>
            </value>
            <value>
                <fullName>2 mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>