force-app/main/default/objects/Master_Voucher__c/fields/Hotel_emetteur__c.field-meta.xml
<CustomField>
    <fullName>Hotel_emetteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filled from dashboard uniquely with the emitting hotel</description>
    <label>Hôtel émetteur</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Master Vouchers OC (Hôtel émetteur)</relationshipLabel>
    <relationshipName>Master_Vouchers_OC</relationshipName>
    <type>Lookup</type>
</CustomField>