force-app/main/default/objects/Master_Voucher__c/fields/Hotel_Service_Emmetteur__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Service_Emmetteur__c</fullName>
    <description>Filled automatically with the connected user&apos;s division</description>
    <label>Hôtel/Service Emetteur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>