force-app/main/default/objects/Master_Voucher__c/fields/Montant_offert__c.field-meta.xml
<CustomField>
    <fullName>Montant_offert__c</fullName>
    <label>Montant offert €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>