force-app/main/default/objects/Master_Voucher__c/fields/Nature_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>Nature_de_la_demande__c</fullName>
    <label>Nature de la demande</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manifestation sportive</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Prospection commerciale</fullName>
            </value>
            <value>
                <fullName>Offre mariage</fullName>
            </value>
            <value>
                <fullName>Réclamation (Réservé SRC)</fullName>
            </value>
            <value>
                <fullName>Prolongation IR-OC (SRC - DR)</fullName>
            </value>
            <value>
                <fullName>Prolongation IR-OC (CRC - DR)</fullName>
                <isActive>false</isActive>
                <label>Prolongation IR-OC (CRC - DR)</label>
            </value>
            <value>
                <fullName>Réclamation (Réservé CRC)</fullName>
                <isActive>false</isActive>
                <label>Réclamation (Réservé CRC)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>