force-app/main/default/objects/Master_Voucher__c/fields/Nom_Pr_nom_client__c.field-meta.xml
<CustomField>
    <fullName>Nom_Pr_nom_client__c</fullName>
    <label>Prénom / Nom client</label>
    <length>50</length>
    <type>Text</type>
</CustomField>