force-app/main/default/objects/Master_Voucher__c/fields/Nombre_de_copie_s__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_copie_s__c</fullName>
    <label>Nombre de copie(s)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>