force-app/main/default/objects/Master_Voucher__c/fields/Num_ro_de_t_l_phone_client__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_de_t_l_phone_client__c</fullName>
    <label>Numéro de téléphone client</label>
    <type>Phone</type>
</CustomField>