force-app/main/default/objects/Master_Voucher__c/fields/Offert_l_occasion_de__c.field-meta.xml
<CustomField>
    <fullName>Offert_l_occasion_de__c</fullName>
    <label>Offert à l&apos;occasion de</label>
    <length>50</length>
    <type>Text</type>
</CustomField>