force-app/main/default/objects/Master_Voucher__c/fields/P_riode_de_validit__c.field-meta.xml
<CustomField>
    <fullName>P_riode_de_validit__c</fullName>
    <label>Période de validité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Du lundi au dimanche</fullName>
            </value>
            <value>
                <fullName>Les ven.; sam.;dim. ou fériés</fullName>
                <label>Les ven., sam.,dim. ou fériés</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>