force-app/main/default/objects/Master_Voucher__c/fields/Personal_account__c.field-meta.xml
<CustomField>
    <fullName>Personal_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Vouchers OC (Personal account)</relationshipLabel>
    <relationshipName>Master_Vouchers1</relationshipName>
    <type>Lookup</type>
</CustomField>