force-app/main/default/objects/Master_Voucher__c/fields/Pr_nom_Nom_de_l_m_tteur__c.field-meta.xml
<CustomField>
    <fullName>Pr_nom_Nom_de_l_m_tteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prénom / Nom de l&apos;émetteur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>