force-app/main/default/objects/Master_Voucher__c/fields/Prestation_Offerte__c.field-meta.xml
<CustomField>
    <fullName>Prestation_Offerte__c</fullName>
    <label>Prestation Offerte</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Une nuit en chambre 1-2 personnes</fullName>
            </value>
            <value>
                <fullName>Une nuit en chambre familiale</fullName>
            </value>
            <value>
                <fullName>Une nuit en chambre 1-2 personnes avec petits déjeuners</fullName>
            </value>
            <value>
                <fullName>Une nuit en chambre familiale avec petits déjeuners</fullName>
            </value>
            <value>
                <fullName>Un petit déjeuner</fullName>
            </value>
            <value>
                <fullName>Deux petits déjeuners</fullName>
            </value>
            <value>
                <fullName>Trois petits déjeuners</fullName>
            </value>
            <value>
                <fullName>Quatre petits déjeuners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>