force-app/main/default/objects/Master_Voucher__c/fields/Service_emetteur__c.field-meta.xml
<CustomField>
    <fullName>Service_emetteur__c</fullName>
    <defaultValue>$User.Department</defaultValue>
    <description>Filled by the user or automatically with the user&apos;s department if not filled by the user</description>
    <label>Service émetteur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUILD</fullName>
            </value>
            <value>
                <fullName>DIRECTION GENERALE</fullName>
            </value>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>SRC</fullName>
            </value>
            <value>
                <fullName>SRC Promos</fullName>
            </value>
            <value>
                <fullName>VENTE CORPORATE</fullName>
            </value>
            <value>
                <fullName>VENTE LOISIRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>