force-app/main/default/objects/Master_Voucher__c/fields/Tech_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Tech_CreatedDate__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CreatedDate</label>
    <type>Date</type>
</CustomField>