force-app/main/default/objects/Master_Voucher__c/fields/Tech_EmetteurEmail__c.field-meta.xml
<CustomField>
    <fullName>Tech_EmetteurEmail__c</fullName>
    <description>Technical Field used in LC21_DashboardOCQuotasManagement</description>
    <formula>Pr_nom_Nom_de_l_m_tteur__r.Email</formula>
    <label>Tech_EmetteurEmail</label>
    <type>Text</type>
</CustomField>