force-app/main/default/objects/Master_Voucher__c/fields/Valable_dans_cet_h_tel__c.field-meta.xml
<CustomField>
    <fullName>Valable_dans_cet_h_tel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Valable dans cet hôtel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hotel__c.Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipName>Master_Vouchers1</relationshipName>
    <type>Lookup</type>
</CustomField>