force-app/main/default/objects/Master_Voucher__c/fields/Valable_dans_cet_hotel_ComName__c.field-meta.xml
<CustomField>
    <fullName>Valable_dans_cet_hotel_ComName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Valable_dans_cet_h_tel__c  , Valable_dans_cet_h_tel__r.Commercial_Hotel_Name__c ,&quot;_self﻿&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valable dans cet hotel</label>
    <type>Text</type>
</CustomField>