force-app/main/default/objects/Master_Voucher__c/fields/Zone_de_validit__c.field-meta.xml
<CustomField>
    <fullName>Zone_de_validit__c</fullName>
    <label>Zone de validité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
                <default>true</default>
                <label>France</label>
            </value>
            <value>
                <fullName>Un hôtel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>