force-app/main/default/objects/Master_Voucher__c/recordTypes/Master_Voucher_OC.recordType-meta.xml
<RecordType>
    <fullName>Master_Voucher_OC</fullName>
    <active>true</active>
    <description>Consultation of an OC Master Voucher</description>
    <label>Master Voucher OC</label>
</RecordType>