force-app/main/default/objects/Master_Voucher__c/recordTypes/Master_Voucher_OC_Creation.recordType-meta.xml
<RecordType>
    <fullName>Master_Voucher_OC_Creation</fullName>
    <active>true</active>
    <description>Creation of an OC Master Voucher</description>
    <label>Master Voucher OC Creation</label>
</RecordType>