force-app/main/default/objects/Master_Voucher__c/validationRules/VR02_MasterVoucher_OC_NbOfCopies.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_MasterVoucher_OC_NbOfCopies</fullName>
    <active>true</active>
    <description>The maximum number of copies for the voucher OC is 200</description>
    <errorConditionFormula>Nombre_de_copie_s__c &gt; 200</errorConditionFormula>
    <errorMessage>Le nombre maximale de copies possible est 200</errorMessage>
</ValidationRule>