force-app/main/default/objects/Master_Voucher__c/validationRules/VR03_MasterVoucher_OC_NomClientOuOccasio.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_MasterVoucher_OC_NomClientOuOccasio</fullName>
    <active>true</active>
    <errorConditionFormula>Nom_Pr_nom_client__c == &apos;&apos; &amp;&amp;  Offert_l_occasion_de__c ==&apos;&apos;</errorConditionFormula>
    <errorMessage>Le champ &apos;Nom/Prénom client&apos; ou le champ &apos;Offert à l&apos;occasion de&apos; doit être rempli</errorMessage>
</ValidationRule>