force-app/main/default/objects/Master_Voucher__c/validationRules/VR04_MasterVoucher_OC_NbrVoucher.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_MasterVoucher_OC_NbrVoucher</fullName>
    <active>true</active>
    <errorConditionFormula>Case__c!= null &amp;&amp;  Nombre_de_copie_s__c != 1 &amp;&amp;  $User.BypassValidationRule__c</errorConditionFormula>
    <errorMessage>Case can have only one voucher and voucher can have only one case.</errorMessage>
</ValidationRule>