force-app/main/default/objects/Master_Voucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nom_Pr_nom_client__c</columns>
    <columns>Nombre_de_copie_s__c</columns>
    <columns>Account_Company__c</columns>
    <columns>Offert_l_occasion_de__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>